--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.1.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/bsh-2.0b1.jar"/>
+	<classpathentry kind="lib" path="lib/antext-04Jul2006.jar"/>
 	<classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
