--- a/.classpath
+++ b/.classpath
@@ -22,12 +22,12 @@
 	<classpathentry kind="lib" path="lib/ant-1.6.3.jar"/>
 	<classpathentry kind="lib" path="endorsed/xalan.jar"/>
 	<classpathentry kind="lib" path="endorsed/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="testlib/jakarta-oro-2.0.8.jar"/>
-	<classpathentry kind="lib" path="testlib/jdom.jar"/>
 	<classpathentry kind="lib" path="testlib/mockrunner-servlet.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.1.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/bsh-2.0b1.jar"/>
 	<classpathentry kind="lib" path="lib/antext-04Jul2006.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/OpenSAML2-J"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/XMLTooling-J"/>
 	<classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
