--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,6 @@
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml-1.1.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/struts.jar"/>
 	<classpathentry sourcepath="lib/junit-3.8.1-src.jar" kind="lib" path="lib/junit-3.8.1.jar"/>
-	<classpathentry sourcepath="lib/log4j-1.2.5-src.jar" kind="lib" path="lib/log4j-1.2.5.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jargs-0.4.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-collections.jar"/>
@@ -29,5 +28,6 @@
 	<classpathentry kind="lib" path="lib/antext-04Jul2006.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/OpenSAML2-J"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/XMLTooling-J"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.13.jar"/>
 	<classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
