Fix duplicate entries in WAR
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2057 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -216,7 +216,7 @@
         </antcall>
 
 		<!-- create the war -->
-		<war warfile="${dist}/${idp.webapp.name}.war" webxml="${configroot}/idp.xml" basedir="${approot}" update="no" duplicate="preserve">
+		<war warfile="${dist}/${idp.webapp.name}.war" webxml="${configroot}/idp.xml" basedir="${approot}" update="yes" duplicate="add">
 			<!-- Grab any custom extension libraries -->
 			<lib dir="${custom.libs}"/>
 
