--- a/.classpath
+++ b/.classpath
@@ -10,10 +10,8 @@
 	<classpathentry kind="lib" path="lib/bc-asn1.jar"/>
 	<classpathentry kind="lib" path="lib/bsh-2.0b1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections.jar"/>
 	<classpathentry kind="lib" path="lib/commons-dbcp-1.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.03.jar"/>
 	<classpathentry kind="lib" path="lib/commons-pool-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/jargs-0.4.jar"/>
 	<classpathentry kind="lib" path="build-lib/ant-1.6.3.jar"/>
@@ -24,5 +22,13 @@
 	<classpathentry kind="lib" path="build-lib/ant-nodeps-1.6.3.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/XMLTooling-J"/>
 	<classpathentry kind="lib" path="build-lib/mockrunner-servlet.jar"/>
+	<classpathentry kind="lib" path="lib/spring-2.0-core.jar"/>
+	<classpathentry kind="lib" path="lib/spring-2.0-context.jar"/>
+	<classpathentry kind="lib" path="lib/spring-2.0-commons-logging.jar"/>
+	<classpathentry kind="lib" path="lib/spring-2.0-commons-collections.jar"/>
+	<classpathentry kind="lib" path="lib/spring-2.0-beans.jar"/>
+	<classpathentry kind="lib" path="lib/spring-2.0-web.jar"/>
+	<classpathentry kind="lib" path="lib/spring-2.0-webmvc.jar"/>
+	<classpathentry kind="lib" path="lib/spring-2.0-support.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
