--- a/.classpath
+++ b/.classpath
@@ -3,10 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/OpenSAML2-J"/>
-	<classpathentry kind="lib" path="build-lib/junit-3.8.1.jar"/>
-	<classpathentry kind="lib" path="build-lib/log4j-1.2.13.jar"/>
-	<classpathentry kind="lib" path="build-lib/servlet-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/bc-asn1.jar"/>
 	<classpathentry kind="lib" path="lib/bsh-2.0b1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
@@ -20,15 +16,8 @@
 	<classpathentry kind="lib" path="build-lib/ant-junit-1.6.3.jar"/>
 	<classpathentry kind="lib" path="build-lib/ant-launcher-1.6.3.jar"/>
 	<classpathentry kind="lib" path="build-lib/ant-nodeps-1.6.3.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/XMLTooling-J"/>
 	<classpathentry kind="lib" path="build-lib/mockrunner-servlet.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.0-core.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.0-context.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.0-commons-logging.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.0-commons-collections.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.0-beans.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.0-web.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.0-webmvc.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.0-support.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/java-shib-common"/>
+	<classpathentry kind="lib" path="build-lib/jsp-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
