--- a/.classpath
+++ b/.classpath
@@ -3,21 +3,57 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/bc-asn1.jar"/>
-	<classpathentry kind="lib" path="lib/bsh-2.0b1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-dbcp-1.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-pool-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/jargs-0.4.jar"/>
+	<classpathentry kind="lib" path="lib/bc-asn1.jar">
+		<attributes>
+			<attribute value="http://bouncycastle.org/docs/docs1.5/" name="javadoc_location"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/bsh-2.0b1.jar">
+		<attributes>
+			<attribute value="http://www.beanshell.org/javadoc/" name="javadoc_location"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar">
+		<attributes>
+			<attribute value="http://jakarta.apache.org/commons/codec/api-release/" name="javadoc_location"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/commons-dbcp-1.2.1.jar">
+		<attributes>
+			<attribute value="http://jakarta.apache.org/commons/dbcp/apidocs/" name="javadoc_location"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/commons-io-1.1.jar">
+		<attributes>
+			<attribute value="http://jakarta.apache.org/commons/io/api-1.1/" name="javadoc_location"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/commons-pool-1.2.jar">
+		<attributes>
+			<attribute value="http://jakarta.apache.org/commons/pool/apidocs/" name="javadoc_location"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/jargs-0.4.jar">
+		<attributes>
+			<attribute value="http://jargs.sourceforge.net/doc/api/" name="javadoc_location"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="build-lib/ant-1.6.3.jar"/>
 	<classpathentry kind="lib" path="build-lib/ant-contrib.jar"/>
 	<classpathentry kind="lib" path="build-lib/antext-04Jul2006.jar"/>
 	<classpathentry kind="lib" path="build-lib/ant-junit-1.6.3.jar"/>
 	<classpathentry kind="lib" path="build-lib/ant-launcher-1.6.3.jar"/>
 	<classpathentry kind="lib" path="build-lib/ant-nodeps-1.6.3.jar"/>
-	<classpathentry kind="lib" path="build-lib/mockrunner-servlet.jar"/>
+	<classpathentry kind="lib" path="build-lib/mockrunner-servlet.jar">
+		<attributes>
+			<attribute value="http://mockrunner.sourceforge.net/doc/api/" name="javadoc_location"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/java-shib-common"/>
-	<classpathentry kind="lib" path="build-lib/jsp-2.0.jar"/>
+	<classpathentry kind="lib" path="build-lib/jsp-2.0.jar">
+		<attributes>
+			<attribute value="http://tomcat.apache.org/tomcat-5.0-doc/jspapi/" name="javadoc_location"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
