--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -1,6 +1,6 @@
-#Wed Nov 15 19:40:04 EST 2006
+#Thu Nov 30 08:32:18 EST 2006
 eclipse.preferences.version=1
-formatter_profile=_Internet2 Format
+formatter_profile=_Georgetown
 formatter_settings_version=10
 org.eclipse.jdt.ui.exception.name=e
 org.eclipse.jdt.ui.gettersetter.use.is=true
