Remove old web pages Get WAR building, add install ant task
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2204 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.properties
+++ b/build.properties
@@ -9,6 +9,7 @@ thirdpaty-lib.dir=${basedir}/thirdparty-lib
 # Resources files
 resources.dir=${basedir}/resources
 classpathres.dir=${resources.dir}/classpath
+conf.dir=${resources.dir}/conf
 metainf.dir=${resources.dir}/META-INF
 webinf.dir=${resources.dir}/WEB-INF
 webpages.dir=${resources.dir}/webpages
@@ -16,6 +17,9 @@ webpages.dir=${resources.dir}/webpages
 # Source directories
 core-src.dir=${basedir}/src
 test-src.dir=${basedir}/test
+
+# Tools directory
+tools.dir=${basedir}/tools
 
 # Documentation directories
 year = 2002-2007
@@ -30,12 +34,14 @@ build.dir=${basedir}/build
 core-classes.dir=${build.dir}/core
 test-classes.dir=${build.dir}/test
 test-results.dir=${build.dir}/test-results
+webinf-temp.dir=${build.dir}/WEB-INF
 
 # Distribution file releated itmes
 base-package.name = identityprovider
 version = ${build-date}
 dist.dir=${basedir}/dist
 version=${build-date}
-jar.name=${base-package.name}-${version}-jdk-${jdk.target}.war
+jar.name=${base-package.name}-${version}-jdk-${jdk.target}.jar
+war.name=${base-package.name}-${version}-jdk-${jdk.target}.war
 src-dist.name=${base-package.name}-${version}-jdk-${jdk.target}-src
 bin-dist.name=${base-package.name}-${version}-jdk-${jdk.target}-bin
