--- a/build.xml
+++ b/build.xml
@@ -1,223 +1,226 @@
 <project name="Shibboleth Identity Provider" basedir="." default="package">
-	
+
 	<tstamp>
-		<format property="build-date" pattern="ddMMyyyy'T'kkmmss" timezone="GMT"/>
+		<format property="build-date" pattern="ddMMyyyy'T'kkmmss" timezone="GMT" />
 	</tstamp>
 
 	<!-- User based property file that overrides any property below -->
-	<property file="${user.name}-build.properties"/>
-		
-	<!-- Project based property file -->
-    <property file="build.properties" />
+	<property file="${user.name}-build.properties" />
 
-    <!-- Load ant-contrib tasks -->
-    <taskdef resource="net/sf/antcontrib/antlib.xml" />
-	
+	<!-- Project based property file -->
+	<property file="build.properties" />
+
+	<!-- Installation specific property file -->
+	<property file="install.properties" />
+
+	<!-- Load ant-contrib tasks -->
+	<taskdef resource="net/sf/antcontrib/antlib.xml" />
+
 	<!-- Load Checkstyle tasks -->
 	<taskdef resource="checkstyletask.properties" />
 
-    <!-- Classpath for building core classes-->
-    <path id="build-path">
-        <fileset dir="${build-lib.dir}" includes="**/*.jar" />
-        <fileset dir="${lib.dir}" includes="**/*.jar" />
-    </path>
+	<!-- Classpath for building core classes-->
+	<path id="build-path">
+		<fileset dir="${build-lib.dir}" includes="**/*.jar" />
+		<fileset dir="${lib.dir}" includes="**/*.jar" />
+	</path>
 
-    <!-- Classpath for testing classes-->
-    <path id="test-path">
-        <path refid="build-path" />
-        <pathelement location="${core-classes.dir}" />
-        <pathelement location="${core-src.dir}" />
-        <pathelement location="${test-classes.dir}" />
-    	<pathelement location="${test-classes.dir}/data" />
-    	<pathelement location="${test-classes.dir}/log4j.xml" />
-        <pathelement location="${test-src.dir}" />
-        <pathelement location="${classpathres.dir}" />
-    </path>
+	<!-- Classpath for testing classes-->
+	<path id="test-path">
+		<path refid="build-path" />
+		<pathelement location="${core-classes.dir}" />
+		<pathelement location="${core-src.dir}" />
+		<pathelement location="${test-classes.dir}" />
+		<pathelement location="${test-classes.dir}/data" />
+		<pathelement location="${test-classes.dir}/log4j.xml" />
+		<pathelement location="${test-src.dir}" />
+		<pathelement location="${classpathres.dir}" />
+	</path>
 
-    <!-- Prepare directory structure for build -->
-    <target name="build-init">
-        <mkdir dir="${build.dir}" />
-    </target>
+	<!-- Prepare directory structure for build -->
+	<target name="build-init">
+		<mkdir dir="${build.dir}" />
+	</target>
 
-    <!-- Compile core (non-test) classes -->
-    <target name="compile-core" depends="build-init, clean-compile">
-        <mkdir dir="${core-classes.dir}" />
+	<!-- Compile core (non-test) classes -->
+	<target name="compile-core" depends="build-init, clean-compile">
+		<mkdir dir="${core-classes.dir}" />
 
-        <javac srcdir="${core-src.dir}" destdir="${core-classes.dir}" includes="**/*.java" debug="on" source="1.5">
-            <classpath refid="build-path" />
-        </javac>
+		<javac srcdir="${core-src.dir}" destdir="${core-classes.dir}" includes="**/*.java" debug="on" source="1.5">
+			<classpath refid="build-path" />
+		</javac>
 
-    </target>
+	</target>
 
-    <!-- Compile unit test classes -->
-    <target name="compile-test" depends="compile-core">
-        <mkdir dir="${test-classes.dir}" />
+	<!-- Compile unit test classes -->
+	<target name="compile-test" depends="compile-core">
+		<mkdir dir="${test-classes.dir}" />
 
-        <javac srcdir="${test-src.dir}" destdir="${test-classes.dir}" includes="**/*.java" debug="on" source="1.5">
-            <classpath refid="test-path" />
-        </javac>
+		<javac srcdir="${test-src.dir}" destdir="${test-classes.dir}" includes="**/*.java" debug="on" source="1.5">
+			<classpath refid="test-path" />
+		</javac>
 
-    </target>
+	</target>
 
-    <!-- Compile and run unit tests -->
-    <target name="test" depends="compile-core, compile-test" description="Runs the unit tests for the project.">
-        <mkdir dir="${test-results.dir}" />
+	<!-- Compile and run unit tests -->
+	<target name="test" depends="compile-core, compile-test" description="Runs the unit tests for the project.">
+		<mkdir dir="${test-results.dir}" />
 
-    	<echo message="Excuting unit tests using endorsed directory ${java.endorsed.dirs}" />
-        <junit printsummary="off" fork="yes" forkmode="once" haltonerror="false" haltonfailure="false" dir="${basedir}" errorproperty="testFailed">
-        	<jvmarg value="-Djava.endorsed.dirs=${java.endorsed.dirs}" />
-            <classpath refid="test-path" />
-            <formatter type="xml" />
-            <batchtest todir="${test-results.dir}">
-                <fileset dir="${test-classes.dir}">
-                    <include name="**/*Test.class" />
-                </fileset>
-            </batchtest>
-        </junit>
-    	<junitreport todir="${test-results.dir}">
-    	  <fileset dir="${test-results.dir}">
-    	    <include name="TEST-*.xml"/>
-    	  </fileset>
-    	  <report format="frames" todir="${test-report.dir}"/>
-    	</junitreport>
-    	
-    	<echo message="Test report available at ${test-report.dir}/index.html" />
-    	<fail if="testFailed" message="Test failure; see ${test-report.dir}/index.html for more information."/>
-    </target>
+		<echo message="Excuting unit tests using endorsed directory ${java.endorsed.dirs}" />
+		<junit printsummary="off"
+		       fork="yes"
+		       forkmode="once"
+		       haltonerror="false"
+		       haltonfailure="false"
+		       dir="${basedir}"
+		       errorproperty="testFailed">
+			<jvmarg value="-Djava.endorsed.dirs=${java.endorsed.dirs}" />
+			<classpath refid="test-path" />
+			<formatter type="xml" />
+			<batchtest todir="${test-results.dir}">
+				<fileset dir="${test-classes.dir}">
+					<include name="**/*Test.class" />
+				</fileset>
+			</batchtest>
+		</junit>
+		<junitreport todir="${test-results.dir}">
+			<fileset dir="${test-results.dir}">
+				<include name="TEST-*.xml" />
+			</fileset>
+			<report format="frames" todir="${test-report.dir}" />
+		</junitreport>
 
-    <!-- Javadoc core (non-test) classes -->
-    <target name="javadoc" description="Creates the JavaDoc documentatin for the project.">
-        <mkdir dir="${javadoc.dir}" />
-        <javadoc packagenames="org.opensaml.*" 
-        	     sourcepath="${core-src.dir}" 
-        	     destdir="${javadoc.dir}" 
-        	     author="false" version="true" 
-        	     windowtitle="${ant.project.name} ${version} Java API" 
-        	     doctitle="${ant.project.name} ${version} Java API" 
-        	     bottom="${copyright}"
-        	     overview="${core-src.dir}/overview.html">
-            <classpath refid="build-path" />
-        </javadoc>
-    </target>
+		<echo message="Test report available at ${test-report.dir}/index.html" />
+		<fail if="testFailed" message="Test failure; see ${test-report.dir}/index.html for more information." />
+	</target>
 
-    <!-- Removes previously compiled files -->
-    <target name="clean-compile">
-        <delete dir="${build.dir}" />
-    </target>
+	<!-- Javadoc core (non-test) classes -->
+	<target name="javadoc" description="Creates the JavaDoc documentatin for the project.">
+		<mkdir dir="${javadoc.dir}" />
+		<javadoc packagenames="org.opensaml.*"
+		         sourcepath="${core-src.dir}"
+		         destdir="${javadoc.dir}"
+		         author="false"
+		         version="true"
+		         windowtitle="${ant.project.name} ${version} Java API"
+		         doctitle="${ant.project.name} ${version} Java API"
+		         bottom="${copyright}"
+		         overview="${core-src.dir}/overview.html">
+			<classpath refid="build-path" />
+		</javadoc>
+	</target>
 
-    <!-- Removes all build generated content -->
-    <target name="clean" depends="clean-compile" description="Removes any artifact produced by the build process.">
-        <delete dir="${javadoc.dir}" />
-    	<delete dir="${reports.dir}" />
-        <delete dir="${dist.dir}" />
-    </target>
+	<!-- Removes previously compiled files -->
+	<target name="clean-compile">
+		<delete dir="${build.dir}" />
+	</target>
 
-    <!-- Create JAR file -->
-    <target name="package" depends="compile-core, test" description="Creates the project library jar file.">
-        <mkdir dir="${dist.dir}" />
+	<!-- Removes all build generated content -->
+	<target name="clean" depends="clean-compile" description="Removes any artifact produced by the build process.">
+		<delete dir="${javadoc.dir}" />
+		<delete dir="${reports.dir}" />
+		<delete dir="${dist.dir}" />
+	</target>
 
-        <if>
-            <equals arg1="${jdk.target}" arg2="1.4" />
-            <then>
-                <java classname="com.rc.retroweaver.Weaver">
-                    <arg value="-source" />
-                    <arg value="${core-classes.dir}" />
-                    <classpath>
-                        <fileset dir="${thirdpaty-lib.dir}">
-                            <include name="**/*.jar" />
-                        </fileset>
-                    </classpath>
-                </java>
+	<!-- Create JAR file -->
+	<target name="package" depends="compile-core" description="Creates the project library jar file.">
+		<mkdir dir="${dist.dir}" />
 
-                <echo message="**************************************************************" />
-                <echo message="    Remember, you must include the retroweaver-rt jar" />
-                <echo message="    file, located in the thirdparty-lib directory, along with the" />
-                <echo message="    ${jar.name} on your" />
-                <echo message="    classpath in order to use this with JDK 1.4" />
-                <echo message="**************************************************************" />
+		<if>
+			<equals arg1="${jdk.target}" arg2="1.4" />
+			<then>
+				<java classname="com.rc.retroweaver.Weaver">
+					<arg value="-source" />
+					<arg value="${core-classes.dir}" />
+					<classpath>
+						<fileset dir="${thirdpaty-lib.dir}">
+							<include name="**/*.jar" />
+						</fileset>
+					</classpath>
+				</java>
 
-            </then>
-        </if>
+				<echo message="**************************************************************" />
+				<echo message="    Remember, you must include the retroweaver-rt jar" />
+				<echo message="    file, located in the thirdparty-lib directory, along with the" />
+				<echo message="    ${jar.name} on your" />
+				<echo message="    classpath in order to use this with JDK 1.4" />
+				<echo message="**************************************************************" />
 
-        <jar destfile="${dist.dir}/${jar.name}" whenempty="fail">
-        	<fileset dir="${classpathres.dir}" />
-        	<fileset dir="${metainf.dir}" />
-    		<fileset dir="${webinf.dir}" />
-        	<fileset dir="${webpages.dir}" />
-        	<zipfileset dir="${core-classes.dir}" prefix="/WEB-INF/classes/" />
-        	<zipfileset dir="${lib.dir}" prefix="/WEB-INF/lib/" />
-    	</jar>
+			</then>
+		</if>
 
-    </target>
+		<jar destfile="${dist.dir}/${jar.name}" whenempty="fail">
+			<fileset dir="${classpathres.dir}" />
+			<fileset dir="${metainf.dir}" />
+			<zipfileset dir="${core-classes.dir}" />
+		</jar>
 
-    <!-- **************************************************************** -->
-    <!-- ***                                                          *** -->
-    <!-- ***                     Developer Tasks                      *** -->
-    <!-- ***                                                          *** -->
-    <!-- **************************************************************** -->
-	
+		<copy todir="${webinf-temp.dir}">
+			<fileset dir="${webinf.dir}" />
+			<filterset begintoken="$" endtoken="$">
+				<filter token="IDP_HOME" value="${idp.home}" />
+				<filter token="IDP_VERSION" value="${version}" />
+			</filterset>
+		</copy>
+
+		<jar destfile="${dist.dir}/${war.name}" whenempty="fail">
+			<fileset dir="${classpathres.dir}" />
+			<fileset dir="${metainf.dir}" />
+			<fileset dir="${webinf-temp.dir}" />
+			<fileset dir="${webpages.dir}" />
+			<zipfileset dir="${lib.dir}" prefix="/WEB-INF/lib/" />
+			<zipfileset file="${dist.dir}/${jar.name}" prefix="/WEB-INF/lib/" />
+		</jar>
+
+	</target>
+
+	<target name="install" depends="package" description="Installs the identity provider software.">
+		<mkdir dir="${idp.home}" />
+		<mkdir dir="${idp.home}/lib" />
+		<mkdir dir="${idp.home}/conf" />
+		<mkdir dir="${idp.home}/logs" />
+		<mkdir dir="${idp.home}/bin" />
+		<mkdir dir="${idp.home}/war" />
+
+		<copy todir="${idp.home}/lib" preservelastmodified="true">
+			<fileset dir="${lib.dir}" />
+			<fileset file="${dist.dir}/${jar.name}" />
+		</copy>
+
+		<copy todir="${idp.home}/conf" preservelastmodified="true">
+			<fileset dir="${conf.dir}" />
+			<filterset begintoken="$" endtoken="$">
+				<filter token="IDP_HOME" value="${idp.home}" />
+				<filter token="IDP_VERSION" value="${version}" />
+			</filterset>
+		</copy>
+
+		<copy todir="${idp.home}/bin" preservelastmodified="true">
+			<fileset dir="${tools.dir}" />
+			<filterset begintoken="$" endtoken="$">
+				<filter token="IDP_HOME" value="${idp.home}" />
+				<filter token="IDP_VERSION" value="${version}" />
+			</filterset>
+		</copy>
+
+		<copy todir="${idp.home}/war" file="${dist.dir}/${war.name}" preservelastmodified="true" />
+
+	</target>
+
+	<!-- **************************************************************** -->
+	<!-- ***                                                          *** -->
+	<!-- ***                     Developer Tasks                      *** -->
+	<!-- ***                                                          *** -->
+	<!-- **************************************************************** -->
+
 	<!-- Checks code against style guidelines -->
 	<target name="checkstyle" description="Developer task: Produces coding standard compliance report.">
 		<mkdir dir="${reports.dir}" />
-		
-		<checkstyle config="${basedir}/checkstyle.xml"
-					failOnViolation="false"
-	                classpathref="build-path">
+
+		<checkstyle config="${basedir}/checkstyle.xml" failOnViolation="false" classpathref="build-path">
 			<fileset dir="src" includes="**/*.java" />
 			<formatter type="plain" toFile="${reports.dir}/checkstyle-report.txt" />
 		</checkstyle>
 	</target>
-	
-    <!-- Create TGZ source distribution -->
-    <target name="tgz-src-dist" depends="package, javadoc" description="Developer task: Creates the tar, gzipped source distribution.">
-        <tar tarfile="${dist.dir}/${src-dist.name}.tgz" compression="gzip">
-        	<tarfileset dir="${build-lib.dir}" prefix="/build-lib/" />
-        	<tarfileset dir="${lib.dir}" prefix="/lib/" />
-        	<tarfileset dir="${resources.dir}" prefix="/resources/" />
-        	<tarfileset dir="${core-src.dir}" prefix="/src/" />
-    		<tarfileset dir="${test-src.dir}" prefix="/test/" />
-        	<tarfileset dir="${doc.dir}" prefix="/doc/" />
-        	<tarfileset file="${dist.dir}/${jar.name}" prefix="/dist/" />
-        	<tarfileset file="${basedir}/*.*" prefix="/" />
-        </tar>
-    	<checksum file="${dist.dir}/${src-dist.name}.tgz" />
-    </target>
-
-    <!-- Create TGZ binary distribution -->
-    <target name="tgz-bin-dist" depends="package, javadoc" description="Developer task: Creates the tar, gzipped binary distribution.">
-        <tar tarfile="${dist.dir}/${bin-dist.name}.tgz" compression="gzip">
-        	<tarfileset dir="${lib.dir}" prefix="/lib/" />
-        	<tarfileset dir="${resources.dir}" prefix="/resources/" />
-        	<tarfileset dir="${doc.dir}" prefix="/doc/" />
-        	<tarfileset file="${dist.dir}/${jar.name}" prefix="/dist/" />
-        </tar>
-    	<checksum file="${dist.dir}/${bin-dist.name}.tgz" />
-    </target>
-
-    <!-- Create ZIP source distribution -->
-    <target name="zip-src-dist" depends="package, javadoc" description="Developer task: Creates the zipped source distribution.">
-        <zip zipfile="${dist.dir}/${src-dist.name}.zip" whenempty="fail">
-        	<zipfileset dir="${build-lib.dir}" prefix="build-lib/" />
-        	<zipfileset dir="${lib.dir}" prefix="lib/" />
-        	<zipfileset dir="${resources.dir}" prefix="/resources/" />
-        	<zipfileset dir="${core-src.dir}" prefix="src/" />
-    		<zipfileset dir="${test-src.dir}" prefix="test/" />
-        	<zipfileset dir="${doc.dir}" prefix="doc/" />
-        	<zipfileset file="${dist.dir}/${jar.name}" prefix="/dist/" />
-        	<zipfileset file="${basedir}/*.*" prefix="" />
-        </zip>
-    	<checksum file="${dist.dir}/${src-dist.name}.zip" />
-    </target>
-
-    <!-- Create ZIP binary distribution -->
-    <target name="zip-bin-dist" depends="package, javadoc"  description="Developer task: Creates the zipped binary distribution.">
-        <zip zipfile="${dist.dir}/${bin-dist.name}.zip" whenempty="fail">
-        	<zipfileset dir="${lib.dir}" prefix="lib/" />
-        	<zipfileset dir="${resources.dir}" prefix="/resources/" />
-        	<zipfileset dir="${doc.dir}" prefix="doc/" />
-        	<zipfileset file="${dist.dir}/${jar.name}" prefix="/dist/" />
-        </zip>
-    	<checksum file="${dist.dir}/${bin-dist.name}.zip" />
-    </target>
 
 </project>
