Properly build WAR and install $IDP_HOME Properly load profile handler configuration
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2207 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -14,7 +14,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             file://$IDP_HOME$/conf/internal.xml;
-            file://$IDP_HOME$/conf/services.xml;
+            file://$IDP_HOME$/conf/service.xml;
         </param-value>
     </context-param>
 
@@ -47,7 +47,7 @@
 
     <servlet-mapping>
         <servlet-name>ProfileRequestDispatcher</servlet-name>
-        <url-pattern>/IdP</url-pattern>
+        <url-pattern>/profile/*</url-pattern>
     </servlet-mapping>
 
     <!--
