--- a/build.xml
+++ b/build.xml
@@ -113,6 +113,7 @@
 	<!-- Removes previously compiled files -->
 	<target name="clean-compile">
 		<delete dir="${build.dir}" />
+		<delete dir="${dist.dir}" />
 	</target>
 
 	<!-- Removes all build generated content -->
@@ -151,7 +152,7 @@
 
 		<jar destfile="${dist.dir}/${jar.name}" whenempty="fail">
 			<fileset dir="${classpathres.dir}" />
-			<fileset dir="${metainf.dir}" />
+			<zipfileset dir="${metainf.dir}" prefix="META-INF/"/>
 			<zipfileset dir="${core-classes.dir}" />
 		</jar>
 
@@ -164,12 +165,11 @@
 		</copy>
 
 		<jar destfile="${dist.dir}/${war.name}" whenempty="fail">
-			<fileset dir="${classpathres.dir}" />
-			<fileset dir="${metainf.dir}" />
-			<fileset dir="${webinf-temp.dir}" />
-			<fileset dir="${webpages.dir}" />
-			<zipfileset dir="${lib.dir}" prefix="/WEB-INF/lib/" />
-			<zipfileset file="${dist.dir}/${jar.name}" prefix="/WEB-INF/lib/" />
+			<zipfileset dir="${classpathres.dir}" prefix="WEB-INF/classes/" />
+			<zipfileset dir="${webinf-temp.dir}" prefix="WEB-INF/" />
+			<zipfileset dir="${webpages.dir}" prefix="" />
+			<zipfileset dir="${lib.dir}" prefix="WEB-INF/lib/" />
+			<zipfileset file="${dist.dir}/${jar.name}" prefix="WEB-INF/lib/" />
 		</jar>
 
 	</target>
