Bunch o' bug fixes, all IdP configuration files now load.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2213 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -181,6 +181,7 @@
 		<mkdir dir="${idp.home}/logs" />
 		<mkdir dir="${idp.home}/bin" />
 		<mkdir dir="${idp.home}/war" />
+		<mkdir dir="${idp.home}/temp/metadata" />
 
 		<copy todir="${idp.home}/lib" preservelastmodified="true">
 			<fileset dir="${lib.dir}" />
