--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/java-shib-common"/>
 	<classpathentry kind="lib" path="build-lib/servlet-2.4.jar"/>
 	<classpathentry kind="lib" path="build-lib/junit-3.8.1.jar"/>
+	<classpathentry kind="lib" path="build-lib/spring-2.0.5-mock.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
