--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="build-lib/servlet-2.4.jar"/>
 	<classpathentry kind="lib" path="build-lib/junit-3.8.1.jar"/>
 	<classpathentry kind="lib" path="build-lib/spring-2.0.5-mock.jar"/>
+	<classpathentry kind="lib" path="build-lib/spring-2.0.5-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
