create symlink for shib-tools.sh and chmod +x. (and fix line endings)
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2252 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -203,6 +203,9 @@
 			</filterset>
 		</copy>
 
+		<symlink link="${idp.home}/bin/aacli.sh" resource="shib-tools.sh" />
+		<chmod file="${idp.home}/bin/*.sh" perm="+x" />
+
 		<copy todir="${idp.home}/war" file="${dist.dir}/${war.name}" preservelastmodified="true" />
 
 	</target>
