--- a/build.xml
+++ b/build.xml
@@ -167,7 +167,7 @@
 		<jar destfile="${dist.dir}/${war.name}" whenempty="fail">
 			<zipfileset dir="${webinf-temp.dir}" prefix="WEB-INF/" />
 			<zipfileset dir="${webpages.dir}" prefix="" />
-			<zipfileset dir="${lib.dir}" prefix="WEB-INF/lib/" />
+			<zipfileset dir="${lib.dir}" prefix="WEB-INF/lib/" excludes="**/log4j*.jar"/>
 			<zipfileset file="${dist.dir}/${jar.name}" prefix="WEB-INF/lib/" />
 		</jar>
 
