--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -12,10 +12,7 @@
     -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>
-            file://$IDP_HOME$/conf/internal.xml;
-            file://$IDP_HOME$/conf/service.xml;
-        </param-value>
+        <param-value>file://$IDP_HOME$/conf/internal.xml; file://$IDP_HOME$/conf/service.xml;</param-value>
     </context-param>
 
     <!-- 
@@ -35,9 +32,7 @@
         <session-timeout>30</session-timeout>
     </session-config>
 
-    <!--
-        Profile Request Dispatcher
-    -->
+    <!-- Profile Request Dispatcher -->
     <servlet>
         <servlet-name>ProfileRequestDispatcher</servlet-name>
         <servlet-class>
@@ -50,19 +45,38 @@
         <url-pattern>/profile/*</url-pattern>
     </servlet-mapping>
 
-    <!--
-        Authentication Manager
-    -->
-    <!--
-        <servlet>
-        <servlet-name>AuthenticationManager</servlet-name>
-        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.AuthenticationManager</servlet-class>
-        </servlet>
-        
-        <servlet-mapping>
-        <servlet-name>AuthenticationManager</servlet-name>
-        <url-pattern>/IdP/Authn</url-pattern>
-        </servlet-mapping>
-    -->
+    <!-- Authentication Engine Entry Point -->
+    <servlet>
+        <servlet-name>AuthenticationEngine</servlet-name>
+        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.AuthenticationEngine</servlet-class>
+    </servlet>
 
+    <servlet-mapping>
+        <servlet-name>AuthenticationEngine</servlet-name>
+        <url-pattern>/AuthnEngine</url-pattern>
+    </servlet-mapping>
+
+    <!-- Servlet protected by container user for RemoteUser authentication -->
+    <servlet>
+        <servlet-name>RemoteUserAuthHandler</servlet-name>
+        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.RemoteUserAuthServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>RemoteUserAuthHandler</servlet-name>
+        <url-pattern>/Authn/RemoteUser</url-pattern>
+    </servlet-mapping>
+
+    <security-constraint>
+        <display-name>Shibboleth IdP</display-name>
+        <web-resource-collection>
+            <web-resource-name>Shibboleth IdP</web-resource-name>
+            <url-pattern>/Authn/RemoteUser</url-pattern>
+        </web-resource-collection>
+    </security-constraint>
+    
+    <login-config>
+      <auth-method>BASIC</auth-method>
+      <realm-name>UID/Password Auth</realm-name>
+    </login-config>
 </web-app>
