Hook in SAML 1 goodness Improve error message on error page a bit
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2254 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -203,7 +203,7 @@
 			</filterset>
 		</copy>
 
-		<symlink link="${idp.home}/bin/aacli.sh" resource="shib-tools.sh" />
+		<symlink link="${idp.home}/bin/aacli.sh" resource="shib-tools.sh" overwrite="true"/>
 		<chmod file="${idp.home}/bin/*.sh" perm="+x" />
 
 		<copy todir="${idp.home}/war" file="${dist.dir}/${war.name}" preservelastmodified="true" />
