Remove custom directory, however extensions are done in 2.0, that ain't it Move HttpHelper down into shib-common Some SSO bug fixes
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2259 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry excluding="classpath/|conf/" including="META-INF/" kind="src" path="resources"/>
 	<classpathentry kind="src" path="resources/conf"/>
-	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="src" path="resources/classpath"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/java-shib-common"/>
