--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -82,6 +82,6 @@
     
     <login-config>
       <auth-method>BASIC</auth-method>
-      <realm-name>Password Auth</realm-name>
+      <realm-name>IdP Password Authentication</realm-name>
     </login-config>
 </web-app>
