Stop using build-date as version number
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2319 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.properties
+++ b/build.properties
@@ -38,9 +38,8 @@ webinf-temp.dir=${build.dir}/WEB-INF
 
 # Distribution file releated itmes
 base-package.name = identityprovider
-version = ${build-date}
+version = trunk
 dist.dir=${basedir}/dist
-version=${build-date}
 jar.name=${base-package.name}-${version}-jdk-${jdk.target}.jar
 war.name=${base-package.name}-${version}-jdk-${jdk.target}.war
 src-dist.name=${base-package.name}-${version}-jdk-${jdk.target}-src
