Make install the default build target Add missing namespace prefix to example resolver
Resolves bugs SIDP 18 & 19

git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2342 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="Shibboleth Identity Provider" basedir="." default="package">
+<project name="Shibboleth Identity Provider" basedir="." default="install">
 	
 	<!-- User based property file that overrides any property below -->
 	<property file="${user.name}-build.properties" />
@@ -184,7 +184,6 @@
 			</filterset>
 		</copy>
 
-		<symlink link="${idp.home}/bin/aacli.sh" resource="shib-tools.sh" overwrite="true" />
 		<chmod file="${idp.home}/bin/*.sh" perm="+x" />
 
 		<copy todir="${webinf-temp.dir}">
