Synch up with minor artifact map changes Ensure content is flushed to stream in status handler
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2345 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -36,7 +36,7 @@
     <servlet>
         <servlet-name>ProfileRequestDispatcher</servlet-name>
         <servlet-class>
-            edu.internet2.middleware.shibboleth.idp.profile.ShibbolethProfileRequestDispatcher
+            edu.internet2.middleware.shibboleth.common.profile.ProfileRequestDispatcherServlet
         </servlet-class>
     </servlet>
 
