Remove logout method from Authn handler Rename Authn handlers to Login handlers
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2368 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -59,7 +59,7 @@
     <!-- Servlet protected by container user for RemoteUser authentication -->
     <servlet>
         <servlet-name>RemoteUserAuthHandler</servlet-name>
-        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.RemoteUserAuthServlet</servlet-class>
+        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.RemoteUserLoginServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
@@ -70,7 +70,7 @@
     <!-- Servlet for doing Username/Password authentication -->
     <servlet>
         <servlet-name>UsernamePasswordAuthHandler</servlet-name>
-        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.UsernamePasswordAuthenticationServlet</servlet-class>
+        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.UsernamePasswordLoginServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
