updates to aacli - resolve servlet-api dependency, fix bug in creation of RelyingPartyConfiguration, use IDP_HOME env var to determine default config dir
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2377 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -166,6 +166,7 @@
 		<copy todir="${idp.home}/lib" preservelastmodified="true">
 			<fileset dir="${lib.dir}" />
 			<fileset file="${dist.dir}/${jar.name}" />
+			<fileset file="${build-lib.dir}/servlet-2.4.jar" />
 		</copy>
 
 		<copy todir="${idp.home}/conf" preservelastmodified="true" overwrite="${idp.overwrite-config}">
