Create backups of existing configuration files anytime we do an install.  Ant appears to always overwrite configs if the source is newer than the destination...  even with overwrite set to false
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2391 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -161,13 +161,23 @@
 		<mkdir dir="${idp.home}/logs" />
 		<mkdir dir="${idp.home}/bin" />
 		<mkdir dir="${idp.home}/war" />
-		<mkdir dir="${idp.home}/temp/metadata" />
+		<mkdir dir="${idp.home}/metadata" />
 
 		<copy todir="${idp.home}/lib" preservelastmodified="true">
 			<fileset dir="${lib.dir}" />
 			<fileset file="${dist.dir}/${jar.name}" />
 			<fileset file="${build-lib.dir}/servlet-2.4.jar" />
 		</copy>
+		
+		<if>
+			<available file="${idp.home}/conf" />
+			<then>
+				<mkdir dir="${idp.home}/conf.bak" />
+				<copy todir="${idp.home}/conf.bak" preservelastmodified="true">
+					<fileset dir="${idp.home}/conf" />
+				</copy>
+			</then>
+		</if>
 
 		<copy todir="${idp.home}/conf" preservelastmodified="true" overwrite="${idp.overwrite-config}">
 			<fileset dir="${conf.dir}" />
