--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -59,7 +59,7 @@
     <!-- Servlet protected by container user for RemoteUser authentication -->
     <servlet>
         <servlet-name>RemoteUserAuthHandler</servlet-name>
-        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.RemoteUserLoginServlet</servlet-class>
+        <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.RemoteUserAuthServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
