--- a/build.xml
+++ b/build.xml
@@ -207,7 +207,7 @@
 		<jar destfile="${idp.home}/war/${war.name}" whenempty="fail">
 			<zipfileset dir="${webinf-temp.dir}" prefix="WEB-INF/" />
 			<zipfileset dir="${webpages.dir}" prefix="" />
-			<zipfileset dir="${lib.dir}" prefix="WEB-INF/lib/" excludes="**/log4j-1.2.14.jar" />
+			<zipfileset dir="${lib.dir}" prefix="WEB-INF/lib/" />
 			<zipfileset file="${dist.dir}/${jar.name}" prefix="WEB-INF/lib/" />
 		</jar>
 
