--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="build-lib/servlet-2.4.jar"/>
 	<classpathentry kind="lib" path="build-lib/junit-3.8.1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/java-shib-common"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/java-shib-common"/>
 	<classpathentry kind="lib" path="build-lib/spring-2.0.7-mock.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
