Checkstyle cleanups Ensure macros are correctly populated in src before compilation
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2509 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.properties
+++ b/build.properties
@@ -31,7 +31,8 @@ test-report.dir=${reports.dir}/unit-test
 
 # Directories for some build generated resources
 build.dir=${basedir}/build
-core-classes.dir=${build.dir}/core
+core-prep-source.dir=${build.dir}/core/src
+core-classes.dir=${build.dir}/core/classes
 test-classes.dir=${build.dir}/test
 test-results.dir=${build.dir}/test-results
 webinf-temp.dir=${build.dir}/WEB-INF
