Small default config updates
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2511 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -159,6 +159,7 @@
 		<mkdir dir="${idp.home}/bin" />
 		<mkdir dir="${idp.home}/war" />
 		<mkdir dir="${idp.home}/metadata" />
+        <mkdir dir="${idp.home}/credentials" />
 
 		<copy todir="${idp.home}/lib" preservelastmodified="true">
 			<fileset dir="${lib.dir}" />
